tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/issue-6804-nan-match.stderr
error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:14:9
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         NAN => {},
   |         ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:19:10
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         [NAN, _] => {},
   |          ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:24:9
   |
LL | const C: MyType<f32> = MyType(f32::NAN);
   | -------------------- constant defined here
...
LL |         C => {},
   |         ^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:30:9
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         NAN..=1.0 => {},
   |         ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:31:16
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         -1.0..=NAN => {},
   |                ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:32:9
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         NAN.. => {},
   |         ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:33:11
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         ..NAN => {},
   |           ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: aborting due to 7 previous errors

